--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,27 @@
+/* CSS files */
+@import url('../src/css/fonts.css');
+
+
 * {
   margin: 0;
   padding: 0;
+}
+
+/* Menu */
+/* Estilos para desktop */
+@media (min-width: 768px) {
+  .navbar-brand img {
+    width: 200px; /* Tamaño para pantallas grandes */
+    height: auto;
+  }
+}
+
+/* Estilos para dispositivos móviles */
+@media (max-width: 767px) {
+  .navbar-brand img {
+    width: 200px; /* Tamaño para pantallas pequeñas */
+    height: auto;
+  }
 }
 
 /* General Service */
