--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* Fonts */
@@ -15,6 +16,19 @@ h1 {
   font-weight: 700;
   font-size: 50px;
   color: white;
+}
+
+h2 {
+  font-style: italic;
+  background-color:  #808000;
+  border-radius: 10px;
+  padding: 5px;
+  color: white;
+}
+
+h3 {
+  font-weight: 600;
+  font-style: italic;
 }
 
 h5 {
