--- a/src/css/contact.module.css
+++ b/src/css/contact.module.css
@@ -1,4 +1,4 @@
-/* contact.css */
+/* contact.module.css */
 
 /* Colores */
 :root {
@@ -10,10 +10,11 @@
 
 /* Estilos para el cuadro de contacto */
 .container {
-  background-color: var(--azul-marino);
+  background-color: white;
   padding: 30px;
-  border: 5px solid var(--turquesa);
+  border: 5px solid var(--azul-profundo);
   border-radius: 10px;
+  margin: 20px;
 }
 
 .professional-profile img {
@@ -24,11 +25,19 @@
 .professional-profile h3,
 .professional-profile p {
   color: var(--verde-oliva);
+  font-weight: 600;
 }
 
 .contact-info,
 .contact-form {
   color: var(--turquesa);
+  font-weight: 600;
+  font-style: italic;
+}
+
+.contact-info,
+.contact-form label{
+  padding: 5px;
 }
 
 /* Agrega estilos adicionales si los necesitas */
