--- a/trasmundo-front/src/App.css
+++ b/trasmundo-front/src/App.css
@@ -3,10 +3,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Tenor+Sans&display=swap');
 
 
-* {
+body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  min-height: 100vh;
 }
 
 /* Fonts */
