--- a/trasmundo-front/src/css/contact.module.css
+++ b/trasmundo-front/src/css/contact.module.css
@@ -8,14 +8,6 @@
   --cafe: #F2E2CE; /* Café */
 }
 
-/* Estilos para el cuadro de contacto */
-.container {
-  background-color: var(--azul);
-  padding: 30px;
-  border: 5px solid var(--celeste);
-  border-radius: 10px;
-}
-
 .professional-profile img {
   width: 150px;
   height: 150px;
@@ -31,4 +23,20 @@
   color: var(--cafe);
 }
 
-/* Agrega estilos adicionales si los necesitas */
+.form {
+  background-color: white;
+  color: var(--verde);
+  border-radius: 10px;
+}
+
+
+.info {
+  background-color: var(--celeste);
+  color: var(--azul);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.select {
+  width: 100%; /* Ajusta el ancho según sea necesario */
+}
